--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
       "version": "0.0.0",
       "type": "module",
       "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+            "dev": "vite",
+            "build": "vite build",
+            "preview": "vite preview"
       },
       "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.15.0"
+            "i18next": "^23.16.8",
+            "react": "^18.2.0",
+            "react-dom": "^18.2.0",
+            "react-i18next": "^13.5.0",
+            "react-router-dom": "^6.15.0"
       },
       "devDependencies": {
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
-        "@vitejs/plugin-react": "^3.1.0",
-        "vite": "^4.2.0"
+            "@types/react": "^18.0.28",
+            "@types/react-dom": "^18.0.11",
+            "@vitejs/plugin-react": "^3.1.0",
+            "vite": "^4.2.0"
       }
-    }
+}
